<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.appsku.MainActivity" >
    
    <LinearLayout
        android:id="@+id/layParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="254dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_launcher" android:contentDescription="@string/todo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessLeaf" >

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/bottom_padding"
                android:paddingLeft="@dimen/left_padding"
                android:paddingRight="@dimen/right_padding"
                android:paddingTop="@dimen/top_padding"
                android:text="@string/signin" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frmSigninLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical|center"
            android:text="@string/signin"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/SigninUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUsername"
                android:textAlignment="gravity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inUsernameSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txthintusername"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/SigninPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inPasswordSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txthintpassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <Button
                android:id="@+id/btnBackSignin"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="@string/txtbtnback" />

            <Button
                android:id="@+id/btnSimpanSignin"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtbtnSignIn" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frmSignupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center_vertical|center"
            android:text="@string/frmSignup"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/SignupUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtUsername"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inUsernameSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txthintusername"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <TextView
                android:id="@+id/SignupPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtPassword"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inPasswordSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txthintpassword"
                android:inputType="numberPassword" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/bottom_padding"
            android:paddingLeft="@dimen/left_padding"
            android:paddingRight="@dimen/right_padding"
            android:paddingTop="@dimen/top_padding" >

            <Button
                android:id="@+id/btnBackSignup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.53"
                S=""
                android:text="@string/txtbtnback" />

            <Button
                android:id="@+id/btnSimpanSignup"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/txtbtnsimpan" />

        </LinearLayout>

    </LinearLayout>
 
</LinearLayout>